// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getHoverStyle() should return correct css for opts: { inset: '-4px -2px', borderRadius: '6px', theme: 'dark' } 1`] = `
{
  "@media(hover:hover)": {
    "&:hover::before": {
      "WebkitBackdropFilter": "blur(32px)",
      "backdropFilter": "blur(32px)",
      "background": "rgba(126, 127, 130, 0.20)",
      "borderRadius": "6px",
      "content": """",
      "inset": "-4px -2px",
      "pointerEvents": "none",
      "position": "absolute",
      "zIndex": -1,
    },
  },
  "position": "relative",
  "zIndex": 0,
}
`;

exports[`getHoverStyle() should return correct css for opts: { inset: '-4px -2px', borderRadius: '6px', theme: 'light' } 1`] = `
{
  "@media(hover:hover)": {
    "&:hover::before": {
      "WebkitBackdropFilter": "blur(32px)",
      "backdropFilter": "blur(32px)",
      "background": "rgba(148, 149, 152, 0.20)",
      "borderRadius": "6px",
      "content": """",
      "inset": "-4px -2px",
      "pointerEvents": "none",
      "position": "absolute",
      "zIndex": -1,
    },
  },
  "position": "relative",
  "zIndex": 0,
}
`;

exports[`getHoverStyle() should return correct css for opts: { inset: 'medium', borderRadius: 'medium', theme: 'dark' } 1`] = `
{
  "@media(hover:hover)": {
    "&:hover::before": {
      "WebkitBackdropFilter": "blur(32px)",
      "backdropFilter": "blur(32px)",
      "background": "rgba(126, 127, 130, 0.20)",
      "borderRadius": "8px",
      "content": """",
      "inset": "-6px",
      "pointerEvents": "none",
      "position": "absolute",
      "zIndex": -1,
    },
  },
  "position": "relative",
  "zIndex": 0,
}
`;

exports[`getHoverStyle() should return correct css for opts: { inset: 'medium', borderRadius: 'medium', theme: 'light' } 1`] = `
{
  "@media(hover:hover)": {
    "&:hover::before": {
      "WebkitBackdropFilter": "blur(32px)",
      "backdropFilter": "blur(32px)",
      "background": "rgba(148, 149, 152, 0.20)",
      "borderRadius": "8px",
      "content": """",
      "inset": "-6px",
      "pointerEvents": "none",
      "position": "absolute",
      "zIndex": -1,
    },
  },
  "position": "relative",
  "zIndex": 0,
}
`;

exports[`getHoverStyle() should return correct css for opts: { inset: 'small', borderRadius: 'small', theme: 'dark' } 1`] = `
{
  "@media(hover:hover)": {
    "&:hover::before": {
      "WebkitBackdropFilter": "blur(32px)",
      "backdropFilter": "blur(32px)",
      "background": "rgba(126, 127, 130, 0.20)",
      "borderRadius": "4px",
      "content": """",
      "inset": "-4px",
      "pointerEvents": "none",
      "position": "absolute",
      "zIndex": -1,
    },
  },
  "position": "relative",
  "zIndex": 0,
}
`;

exports[`getHoverStyle() should return correct css for opts: { inset: 'small', borderRadius: 'small', theme: 'light' } 1`] = `
{
  "@media(hover:hover)": {
    "&:hover::before": {
      "WebkitBackdropFilter": "blur(32px)",
      "backdropFilter": "blur(32px)",
      "background": "rgba(148, 149, 152, 0.20)",
      "borderRadius": "4px",
      "content": """",
      "inset": "-4px",
      "pointerEvents": "none",
      "position": "absolute",
      "zIndex": -1,
    },
  },
  "position": "relative",
  "zIndex": 0,
}
`;

exports[`getHoverStyle() should return correct css for opts: { inset: undefined, borderRadius: undefined, theme: undefined } 1`] = `
{
  "@media(hover:hover)": {
    "&:hover::before": {
      "WebkitBackdropFilter": "blur(32px)",
      "backdropFilter": "blur(32px)",
      "background": "rgba(148, 149, 152, 0.20)",
      "borderRadius": "4px",
      "content": """",
      "inset": "-4px",
      "pointerEvents": "none",
      "position": "absolute",
      "zIndex": -1,
    },
  },
  "position": "relative",
  "zIndex": 0,
}
`;
